crates/apollo-compiler/test_data/diagnostics/0094_object_type_extensions.txt
Error: fields must be unique in a definition
   ╭─[0094_object_type_extensions.graphql:5:3]
   │
 5 │   age: Int
   │   ────┬───  
   │       ╰───── previous definition of `age` here
 6 │   age: Int
   │   ────┬───  
   │       ╰───── `age` redefined here
   │ 
   │ Help: `age` field must only be defined once in this input object definition.
───╯
Error: fields must be unique in a definition
    ╭─[0094_object_type_extensions.graphql:10:3]
    │
 10 │   name: String
    │   ──────┬─────  
    │         ╰─────── previous definition of `name` here
    │ 
 13 │   name: String
    │   ──────┬─────  
    │         ╰─────── `name` redefined here
    │ 
    │ Help: `name` field must only be defined once in this input object definition.
────╯
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0094_object_type_extensions.graphql:20:29]
    │
 17 │ type UniqueDirective @nonRepeatable {
    │                      ───────┬──────  
    │                             ╰──────── directive nonRepeatable first called here
    │ 
 20 │ extend type UniqueDirective @nonRepeatable {
    │                             ───────┬──────  
    │                                    ╰──────── directive nonRepeatable called again here
────╯
Error: type `UniqueInterfaces` can only implement interface `Base` once
    ╭─[0094_object_type_extensions.graphql:31:41]
    │
 27 │ type UniqueInterfaces implements Base {
    │                                  ──┬─  
    │                                    ╰─── `Base` interface implementation previously declared here
    │ 
 31 │ extend type UniqueInterfaces implements Base {
    │                                         ──┬─  
    │                                           ╰─── `Base` interface implementation declared again here
────╯
Error: type does not satisfy interface `ExtendedInterface`: missing field `fail`
    ╭─[0094_object_type_extensions.graphql:38:1]
    │
 38 │ ╭─▶ type ImplementsBaseButNotExtension implements ExtendedInterface {
    │ │                                                 ────────┬────────  
    │ │                                                         ╰────────── implementation of interface ExtendedInterface declared here
    ┆ ┆   
 40 │ ├─▶ }
    │ │       
    │ ╰─────── add `fail` field to this object
    │ 
 42 │       fail: Boolean
    │       ──────┬──────  
    │             ╰──────── `fail` was originally defined by ExtendedInterface here
    │     
    │     Help: An object must provide all fields required by the interfaces it implements
────╯

